--- a/index.html
+++ b/index.html
@@ -1,172 +1,218 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Polaroid Store</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 0;
-            color: #333;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Polaroid Store</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f0f0f0;
+      margin: 0;
+      padding: 0;
+    }
 
-        header {
-            background-color: #ffd6d6;
-            padding: 20px;
-            text-align: center;
-        }
+    .container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 20px;
+    }
 
-        nav {
-            background-color: #ff9999;
-            text-align: center;
-            padding: 10px;
-        }
+    .navbar {
+      background-color: #ffc0cb;
+      padding: 10px;
+      display: flex;
+      justify-content: center;
+    }
 
-        nav a {
-            text-decoration: none;
-            color: #333;
-            margin: 0 10px;
-        }
+    .navbar button {
+      margin: 0 10px;
+      padding: 10px 20px;
+      border: none;
+      background-color: #ffb6c1;
+      border-radius: 5px;
+      cursor: pointer;
+    }
 
-        section {
-            padding: 20px;
-        }
+    .content {
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 10px;
+      margin-top: 20px;
+    }
 
-        footer {
-            background-color: #ffd6d6;
-            padding: 10px;
-            text-align: center;
-        }
-    </style>
+    .product {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 20px;
+    }
+
+    .product img {
+      max-width: 200px;
+      max-height: 200px;
+      border-radius: 5px;
+    }
+
+    .form-group {
+      margin-bottom: 20px;
+    }
+
+    .form-group label {
+      display: block;
+      margin-bottom: 5px;
+    }
+
+    .form-group input[type="text"],
+    .form-group input[type="email"],
+    .form-group textarea {
+      width: 100%;
+      padding: 10px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+    }
+
+    .form-group textarea {
+      height: 100px;
+    }
+
+    .form-group button {
+      padding: 10px 20px;
+      border: none;
+      background-color: #ffb6c1;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>Welcome to our Polaroid Store</h1>
-    </header>
-
-    <nav>
-        <a href="#home">Home</a>
-        <a href="#product">Product</a>
-        <a href="#wishlist">Wishlist</a>
-        <a href="#cart">Shopping Cart</a>
-        <a href="#reviews">Reviews</a>
-        <a href="#contact">Contact Us</a>
-    </nav>
-
-    <section id="home">
-        <h2>About Polaroids</h2>
-        <p>Polaroids are instant cameras that produce self-developing photos. They are known for their vintage aesthetic and instant gratification.</p>
-        <img src="polaroid.jpg" alt="Polaroid Camera">
-    </section>
-
-    <section id="product">
-        <h2>Our Products</h2>
-        <div class="product">
-            <img src="polaroid1.jpg" alt="Polaroid 1">
-            <p>Polaroid 1 - $50</p>
-            <button onclick="addToCart(1)">Add to Cart</button>
-            <button onclick="addToWishlist(1)">Add to Wishlist</button>
+  <div class="navbar">
+    <button onclick="showHome()">Home</button>
+    <button onclick="showProducts()">Products</button>
+    <button onclick="showWishlist()">Wishlist<span id="wishlistCount"></span></button>
+    <button onclick="showCart()">Shopping Cart<span id="cartCount"></span></button>
+    <button onclick="showContact()">Contact Us</button>
+  </div>
+  <div class="container" id="home" style="display:none;">
+    <div class="content">
+      <h2>About Polaroids</h2>
+      <p>Information about Polaroids and some images can go here.</p>
+    </div>
+  </div>
+  <div class="container" id="products" style="display:none;">
+    <div class="content">
+      <h2>Products</h2>
+      <div class="product">
+        <img src="polaroid1.jpg" alt="Polaroid 1">
+        <div>
+          <h3>Polaroid 1</h3>
+          <p>$50</p>
+          <button>Add to Wishlist</button>
+          <button>Add to Cart</button>
         </div>
-        <div class="product">
-            <img src="polaroid2.jpg" alt="Polaroid 2">
-            <p>Polaroid 2 - $60</p>
-            <button onclick="addToCart(2)">Add to Cart</button>
-            <button onclick="addToWishlist(2)">Add to Wishlist</button>
+      </div>
+      <div class="product">
+        <img src="polaroid2.jpg" alt="Polaroid 2">
+        <div>
+          <h3>Polaroid 2</h3>
+          <p>$60</p>
+          <button>Add to Wishlist</button>
+          <button>Add to Cart</button>
         </div>
-        <div class="product">
-            <img src="polaroid3.jpg" alt="Polaroid 3">
-            <p>Polaroid 3 - $70</p>
-            <button onclick="addToCart(3)">Add to Cart</button>
-            <button onclick="addToWishlist(3)">Add to Wishlist</button>
+      </div>
+      <div class="product">
+        <img src="polaroid3.jpg" alt="Polaroid 3">
+        <div>
+          <h3>Polaroid 3</h3>
+          <p>$70</p>
+          <button>Add to Wishlist</button>
+          <button>Add to Cart</button>
         </div>
-        <div class="product">
-            <img src="polaroid4.jpg" alt="Polaroid 4">
-            <p>Polaroid 4 - $80</p>
-            <button onclick="addToCart(4)">Add to Cart</button>
-            <button onclick="addToWishlist(4)">Add to Wishlist</button>
+      </div>
+      <div class="product">
+        <img src="polaroid4.jpg" alt="Polaroid 4">
+        <div>
+          <h3>Polaroid 4</h3>
+          <p>$80</p>
+          <button>Add to Wishlist</button>
+          <button>Add to Cart</button>
         </div>
-    </section>
+      </div>
+    </div>
+  </div>
+  <div class="container" id="wishlist" style="display:none;">
+    <div class="content">
+      <h2>Wishlist</h2>
+      <!-- Wishlist items will be dynamically displayed here -->
+    </div>
+  </div>
+  <div class="container" id="cart" style="display:none;">
+    <div class="content">
+      <h2>Shopping Cart</h2>
+      <!-- Cart items will be dynamically displayed here -->
+      <p>Total: $<span id="cartTotal">0</span></p>
+    </div>
+  </div>
+  <div class="container" id="contact" style="display:none;">
+    <div class="content">
+      <h2>Contact Us</h2>
+      <form id="contactForm">
+        <div class="form-group">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required>
+        </div>
+        <div class="form-group">
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required>
+        </div>
+        <div class="form-group">
+          <label for="message">Message:</label>
+          <textarea id="message" name="message" required></textarea>
+        </div>
+        <button type="submit">Submit</button>
+      </form>
+    </div>
+  </div>
+  <script>
+    function showHome() {
+      hideAll();
+      document.getElementById("home").style.display = "block";
+    }
 
-    <section id="wishlist">
-        <h2>Wishlist</h2>
-        <p id="wishlistCount">0 items wishlisted</p>
-        <ul id="wishlistItems">
-            <!-- Wishlist items will be dynamically added here -->
-        </ul>
-    </section>
+    function showProducts() {
+      hideAll();
+      document.getElementById("products").style.display = "block";
+    }
 
-    <section id="cart">
-        <h2>Shopping Cart</h2>
-        <ul id="cartItems">
-            <!-- Cart items will be dynamically added here -->
-        </ul>
-    </section>
+    function showWishlist() {
+      hideAll();
+      document.getElementById("wishlist").style.display = "block";
+    }
 
-    <section id="reviews">
-        <h2>Customer Reviews</h2>
-        <ul>
-            <li>Great polaroid selection!</li>
-            <li>Fast shipping, very happy!</li>
-            <li>Excellent customer service</li>
-        </ul>
-    </section>
+    function showCart() {
+      hideAll();
+      document.getElementById("cart").style.display = "block";
+    }
 
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <form>
-            <label for="name">Name:</label><br>
-            <input type="text" id="name" name="name" required><br>
-            <label for="email">Email:</label><br>
-            <input type="email" id="email" name="email" required><br>
-            <label for="message">Message:</label><br>
-            <textarea id="message" name="message" rows="4" cols="50" required></textarea><br>
-            <button type="submit">Submit</button>
-        </form>
-    </section>
+    function showContact() {
+      hideAll();
+      document.getElementById("contact").style.display = "block";
+    }
 
-    <footer>
-        <p>&copy; 2024 Polaroid Store. All rights reserved.</p>
-    </footer>
+    function hideAll() {
+      document.getElementById("home").style.display = "none";
+      document.getElementById("products").style.display = "none";
+      document.getElementById("wishlist").style.display = "none";
+      document.getElementById("cart").style.display = "none";
+      document.getElementById("contact").style.display = "none";
+    }
 
-    <script>
-        let wishlist = [];
-        let cart = [];
-
-        function addToWishlist(productId) {
-            wishlist.push(productId);
-            updateWishlist();
-        }
-
-        function addToCart(productId) {
-            cart.push(productId);
-            updateCart();
-        }
-
-        function updateWishlist() {
-            let wishlistCount = document.getElementById('wishlistCount');
-            wishlistCount.textContent = wishlist.length + ' items wishlisted';
-
-            let wishlistItems = document.getElementById('wishlistItems');
-            wishlistItems.innerHTML = '';
-            wishlist.forEach(productId => {
-                let li = document.createElement('li');
-                li.textContent = 'Polaroid ' + productId;
-                wishlistItems.appendChild(li);
-            });
-        }
-
-        function updateCart() {
-            let cartItems = document.getElementById('cartItems');
-            cartItems.innerHTML = '';
-            cart.forEach(productId => {
-                let li = document.createElement('li');
-                li.textContent = 'Polaroid ' + productId;
-                cartItems.appendChild(li);
-            });
-        }
-    </script>
+    // Dummy function to submit contact form (for demonstration purpose)
+    document.getElementById("contactForm").addEventListener("submit", function(event) {
+      event.preventDefault();
+      alert("Your message has been submitted!");
+      document.getElementById("contactForm").reset();
+    });
+  </script>
 </body>
 </html>
